force-app/main/default/objects/Location_Services__c/Location_Services__c.object-meta.xml
<CustomObject>
    <label>Location Services</label>
    <pluralLabel>Location Services</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Location Services ID</label>
        <displayFormat>LS-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>