force-app/main/default/objects/Location_Services__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <type>Lookup</type>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Location Services</relationshipLabel>
    <relationshipName>Location_Services</relationshipName>
    <required>true</required>
</CustomField>