force-app/main/default/objects/Location_Services__c/fields/Case_Location_Key__c.field-meta.xml
<CustomField>
    <fullName>Case_Location_Key__c</fullName>
    <label>Case Location Key</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>Unique key to prevent duplicate Location Services per Case and Current Location.</description>
</CustomField>