force-app/main/default/objects/Location_Services__c/fields/Final_Origin_Address__c.field-meta.xml
<CustomField>
    <fullName>Final_Origin_Address__c</fullName>
    <label>Final Origin Address</label>
    <type>Text</type>
    <length>255</length>
</CustomField>