force-app/main/default/objects/Location_Services__c/fields/Search_Count__c.field-meta.xml
<CustomField>
    <fullName>Search_Count__c</fullName>
    <label>Search Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>